Added more containers, original methods implementations and fix bugs